[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Tooltips.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui_inventory/tooltips.png" type="Texture" id=2]
[ext_resource path="res://resources/font.tres" type="DynamicFont" id=3]

[node name="Tooltips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 112.0
margin_bottom = 122.0
texture = ExtResource( 2 )
patch_margin_left = 6
patch_margin_top = 24
patch_margin_right = 6
patch_margin_bottom = 7
axis_stretch_vertical = 1

[node name="ItemNameLabel" type="Label" parent="NinePatchRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -56.0
margin_right = 46.0
margin_bottom = -41.0
rect_scale = Vector2( 0.57, 0.57 )
custom_fonts/font = ExtResource( 3 )
text = "Apple"

[node name="CategoryLabel" type="Label" parent="NinePatchRect"]
margin_left = 6.0
margin_top = 14.0
margin_right = 239.0
margin_bottom = 29.0
rect_scale = Vector2( 0.4, 0.4 )
custom_colors/font_color = Color( 0.94902, 0.929412, 0.360784, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Fruit"

[node name="DescriptionLabel" type="Label" parent="NinePatchRect"]
margin_left = 6.0
margin_top = 27.0
margin_right = 253.0
margin_bottom = 245.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = ExtResource( 3 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam aliqua."
autowrap = true
